--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "url": "https://github.com/osorpau/Curso-Asincronismo-JS/issues"
   },
   "homepage": "https://github.com/osorpau/Curso-Asincronismo-JS#readme",
-  "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.2",
+  "dependencies": {
     "xmlhttprequest": "1.8.0"
+  },
+  "devDependencies": {
+    "eslint": "6.8.0",
+    "eslint-config-airbnb-base": "14.1.0",
+    "eslint-plugin-import": "2.20.2"
   }
 }
