--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "callback": "node src/callback/index.js",
     "challenge": "node src/callback/challenge.js",
     "promise-challenge": "node src/callback/challenge.js",
+    "async": "node src/async/index.js",
     "promise": "node src/promise/index.js"
   },
   "repository": {
