--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "js-async",
   "version": "1.0.0",
-  "description": "curso de asincronismo con Javascript - Curso Plazti",
+  "description": "Curso de Asincronismo con Javascript - Curso Plazti",
   "main": "index.js",
   "scripts": {
     "callback": "node src/callback/index.js",
-    "challenge": "node src/callback/challenge.js",
-    "promise-challenge": "node src/callback/challenge.js",
+    "callback-challenge": "node src/callback/challenge.js",
+    "promise": "node src/promise/index.js",
+    "promise-challenge": "node src/promise/challenge.js",
     "async": "node src/async/index.js",
-    "promise": "node src/promise/index.js"
+    "async-challenge": "node src/async/challenge.js"
   },
   "repository": {
     "type": "git",
